# SmartNotesAssistant-WebApp

./: README.md  main.py  pyproject.toml
src/: load_dataset.py  perform_rag.py
static/: style.css
templates/: create_db_fragment.html  index.html  message_fragment.html  milvus_config_fragment.html
