[project]
name = "smartnotesassistant-webapp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bootstrap-flask>=2.5.0",
    "flask>=3.1.2",
    "jinja2>=3.1.6",
    "langchain>=0.3.27",
    "langchain-community>=0.3.29",
    "langchain-core>=0.3.75",
    "langchain-huggingface>=0.3.1",
    "langchain-milvus>=0.2.1",
    "sentence-transformers>=5.1.0",
    "transformers>=4.55.4",
]
